# dash-bipartite

./: .gitignore  README.md  setup.cfg  setup.py
dash_bipartite/: bipartite.py
demo/: app-bipartite-graph.py
tests/: test_bipartite.py
