[metadata]
name = dash_bipartite
version = 0.0.1
description = Dash and networkx based tools for bipartite graph and other two columns networks.
author = sondalex
long_description = file: ./README.md
long_description_content_type = text/markdown
license = MIT,
url = https://github.com/sondalex/dash-bipartite

[options]
packages = find:
# install_requires =
#     pandas
#     networkx
#     dash_cytoscape
    
[tool:pytest]
addopts = -v
testpaths = 
    tests